--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon backend/server.js",
     "start": "node backend/server.js"
   },
   "author": "",
